--- a/2_Adobe/css/style.scss
+++ b/2_Adobe/css/style.scss
@@ -72,7 +72,7 @@
     position: absolute;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 60px);
     background-color: rgba(0, 0, 0, 0.2);
 }
 .menu__item--open .dim {
@@ -82,9 +82,7 @@
 .sub-menus {
     display: flex;
     z-index: 10;
-    left: 0; right: 0;
     margin: 0 auto;
-    position: absolute;
     justify-content: space-around;
     background-color: $back-gray;
     max-width: 1440px;
